crates/fixtures/tests/snapshots/hostile__style_bases.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      147
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "greedy",
  "medium": {
    "width": 430080,
    "height": 307200
  },
  "settings": {
    "max_pages": 1000,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "template": {
    "name": "style-bases",
    "source": "document"
  },
  "pages": [
    {
      "width": 368640,
      "height": 102400
    },
    {
      "width": 368640,
      "height": 102400
    },
    {
      "width": 368640,
      "height": 102400
    },
    {
      "width": 368640,
      "height": 102400
    },
    {
      "width": 368640,
      "height": 102400
    }
  ],
  "frames": [
    {
      "name": "main",
      "role": {
        "flow": "main"
      },
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 10240,
        "ty": 10240
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 204800,
        "height": 24576
      }
    },
    {
      "name": "margin",
      "role": "margin",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 235520,
        "ty": 10240
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 112640,
        "height": 24576
      }
    },
    {
      "name": "main",
      "role": {
        "flow": "main"
      },
      "page": 1,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 10240,
        "ty": 10240
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 204800,
        "height": 24576
      }
    },
    {
      "name": "margin",
      "role": "margin",
      "page": 1,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 235520,
        "ty": 10240
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 112640,
        "height": 24576
      }
    },
    {
      "name": "main",
      "role": {
        "flow": "main"
      },
      "page": 2,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 10240,
        "ty": 10240
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 204800,
        "height": 24576
      }
    },
    {
      "name": "margin",
      "role": "margin",
      "page": 2,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 235520,
        "ty": 10240
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 112640,
        "height": 24576
      }
    },
    {
      "name": "main",
      "role": {
        "flow": "main"
      },
      "page": 3,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 10240,
        "ty": 10240
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 204800,
        "height": 24576
      }
    },
    {
      "name": "margin",
      "role": "margin",
      "page": 3,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 235520,
        "ty": 10240
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 112640,
        "height": 24576
      }
    },
    {
      "name": "main",
      "role": {
        "flow": "main"
      },
      "page": 4,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 10240,
        "ty": 10240
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 204800,
        "height": 24576
      }
    },
    {
      "name": "margin",
      "role": "margin",
      "page": 4,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 235520,
        "ty": 10240
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 112640,
        "height": 24576
      }
    }
  ],
  "blocks": [
    {
      "node": "10@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 12288,
        "line_height": 14746,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style half-the-height"
        },
        "bases": {
          "size": "frame-height = 24pt"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 22
          },
          "preview": "Under a hostile style.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 204800,
            "height": 14746
          },
          "baseline": 11680,
          "width": 114969,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 22
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 12288,
              "level": 0,
              "x": 0,
              "width": 114969
            }
          ]
        }
      ]
    },
    {
      "node": "38@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 11264,
        "line_height": 13517,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style named-frame"
        },
        "bases": {
          "size": "frame-width(\"margin\") = 110pt"
        }
      },
      "lines": [
        {
          "frame": 2,
          "text": {
            "start": 0,
            "end": 22
          },
          "preview": "Under a hostile style.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 204800,
            "height": 13517
          },
          "baseline": 10707,
          "width": 105391,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 22
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 105391
            }
          ]
        }
      ]
    },
    {
      "node": "66@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 10240,
        "line_height": 12288,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "default"
        },
        "notes": [
          {
            "severity": "warning",
            "code": "style.basis-unresolved",
            "message": "size in style no-such-frame: frame-width(\"nowhere\") does not exist in this context; counted as zero; this layer's value is ignored and the value inherited from before is used",
            "bytes": null
          }
        ]
      },
      "lines": [
        {
          "frame": 4,
          "text": {
            "start": 0,
            "end": 22
          },
          "preview": "Under a hostile style.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 204800,
            "height": 12288
          },
          "baseline": 9733,
          "width": 95805,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 22
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 95805
            }
          ]
        }
      ]
    },
    {
      "node": "94@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 12288,
        "line_height": 14746,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style of-the-inherited-size"
        },
        "bases": {
          "size": "percentages are of the inherited font size; inherited font size = 10pt"
        }
      },
      "lines": [
        {
          "frame": 6,
          "text": {
            "start": 0,
            "end": 22
          },
          "preview": "Under a hostile style.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 204800,
            "height": 14746
          },
          "baseline": 11680,
          "width": 114969,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 22
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 12288,
              "level": 0,
              "x": 0,
              "width": 114969
            }
          ]
        }
      ]
    },
    {
      "node": "122@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 10240,
        "line_height": 15360,
        "explain": {
          "family": "default",
          "line-height": "style line-height-percent",
          "size": "default"
        },
        "bases": {
          "line-height": "percentages are of the element's font size; font size = 10pt"
        }
      },
      "lines": [
        {
          "frame": 8,
          "text": {
            "start": 0,
            "end": 22
          },
          "preview": "Under a hostile style.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 204800,
            "height": 15360
          },
          "baseline": 11270,
          "width": 95805,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 22
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 95805
            }
          ]
        }
      ]
    }
  ],
  "relations": [],
  "diagnostics": [
    {
      "severity": "warning",
      "code": "style.basis-unresolved",
      "subject": {
        "kind": "node",
        "id": "66@1"
      },
      "message": "size in style no-such-frame: frame-width(\"nowhere\") does not exist in this context; counted as zero; this layer's value is ignored and the value inherited from before is used",
      "bytes": null
    }
  ]
}
